# web3-projects

./: README.md
AI x Web3/: README.md
Bridges & Interop/: README.md
DAO Tools web3/: README.md
DeFi Protocols/: README.md
Ecommerce web3/: README.md
Gamefi web3/: README.md
Infrastructure web3/: README.md
Made.com-style-ecommerce/: README.md  package-lock.json
Memecoin web3/: README.md
NFT web3/: README.md
Oracles web3/: README.md
Payments web3/: README.md
Prediction Market web3/: README.md
Real Estate web3/: README.md
SocialFi web3/: README.md
Stablecoins/: README.md
Uniswap_sniper_bot/: .gitignore  jest.config.js  package.json
Wallets web3/: README.md
Web3 Trading Bots/: README.md
aptos-move-the-future-hackathon-2025/: .gitignore  HACKATHON_SUBMISSION_COMPLETE.md
bridge-relayer-oracle/: .env.example  README.md  hardhat.config.js  package-lock.json  package.json
chainlink-community-tools/: .env.example  README.md  package.json
cross-chain-token-bridge/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
defi-lending-protocol/: .env.example  .env.sepolia  .gitignore  PROJECT_ARCHITECTURE.txt  README.md  foundry.toml
kadena-pact-token/: README.md  token.pact  token.repl
pump-fun-clone/: .env.example  .gitignore  API.md  SETUP.md
pump-fun-clone/contracts/programs/pump_fun/: Cargo.toml
pump-fun-clone/contracts/programs/pump_fun/src/: events.rs
solana-scam-detection-agent/: .env.example  .gitignore  Dockerfile  README.md  SUMMARY.md  jest.config.js  package-lock.json  package.json
(+464 files in other folders)
