[package]
name = "pump_fun"
version = "0.1.0"
description = "Pump.fun clone - Token launchpad with bonding curve"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_fun"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
mpl-token-metadata = "3.2.3"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = "1.0"
